--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
   composer:
     image: composer:1.9.3
+    command: install
     environment:
       - COMPOSER_CACHE_DIR=/app/.cache/composer
     volumes:
@@ -14,7 +15,6 @@ services:
     volumes:
       - ./:/app
     working_dir: /app
-  # NEW IN THIS SECTION!!!
   phpunit:
     image: php:7.4-cli
     restart: 'no'
